[package]
name = "reverse-service"
version = "0.1.0"
repository = "http://TODO"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
keywords = ["hyper", "proxy", "grpc", "client", "service", "reverse"]
categories = ["network-programming", "api-bindings", "web-programming::http-server", "web-programming::http-client"]
description = "Utility to convert a hyper service into a client and vice-versa using the underlying connection"

[dependencies]
bytes = { version = "1.7.1", default-features = false }
futures = { version = "0.3.30", features = ["async-await"], default-features = false }
http = { version = "1.1.0", default-features = false }
http-body-util = { version = "0.1.2", default-features = false }
hyper = { version = "1.4.1", features = ["server", "http1", "http2", "client"], default-features = false }
pin-project = { version = "1.1.5", default-features = false }
tonic = { version = "0.12.1", default-features = false }
tower-service = { version = "0.3.2", default-features = false }
